<resources>
    <string name="app_name">健康助手</string>

    <string name="action_settings">Settings</string>

    <string name="home">首页</string>
    <string name="guide">指南</string>
    <string name="community">社区</string>
    <string name="mine">我的</string>
    <string name="my_message">我的消息</string>
    <string name="click_check">点击查看</string>
    <string name="check_examination_report">查看体检报告</string>
    <string name="nearby_examination_center">周边体检商家</string>
    <string name="nearby_health_foods">周边保健美食</string>
    <string name="hot_topic">热门信息</string>
    <string name="settings_safe">账号安全</string>
    <string name="settings">设置</string>
    <string name="settings_message">新消息通知</string>
    <string name="settings_privacy">隐私</string>
    <string name="settings_common">通用</string>
    <string name="settings_about_us">关于我们</string>

    <!--login-->
    <string name="login">登"&#160;""&#160;""&#160;""&#160;"录</string>
    <string name="register">注"&#160;""&#160;""&#160;""&#160;"册</string>
    <string name="login_phonenumber">手机号码</string>
    <string name="login_phone_number_or_name">手机号码/用户名</string>
    <string name="login_password">密码</string>
    <string name="login_forget_password">忘记密码？</string>

    <!--register-->
    <string name="register_verification_code">验证码</string>
    <string name="register_verification_wait">请稍候~</string>
    <string name="register_already">已经注册？点此登录</string>
    <string name="register_get_sms_code">获取验证码</string>
    <string name="register_phone_number_invalid">手机号码格式不正确</string>
    <string name="register_password_invalid">密码不能少于8位</string>
    <string name="register_password_hint">密码至少8位</string>
    <string name="register_sms_sending">正在获取验证码</string>
    <string name="register_sms_success">获取验证码成功</string>
    <string name="register_sms_fail">获取验证码失败</string>
    <string name="register_phone_registed">该手机号码已被注册！</string>

    <!--verify-->
    <string name="verify_username">用户名</string>
    <string name="verify_sex_male">男生</string>
    <string name="verify_sex_female">女生</string>
    <string name="verify_sex_profile">选择头像&#038;性别</string>
    <string name="verify_sex_rechoose">长按头像可重选</string>

    <string name="verify_clip_profile">裁剪头像</string>
    <string name="verify_clip_profile_failed">选取头像失败</string>
    <string name="verify_please_input_code">请输入验证码</string>
    <string name="verify_please_input_name">请输入用户名</string>
    <string name="verify_please_choose_profile">选个头像吧</string>
    <string name="verify_user_name_used">该用户名已被使用！</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>

    <string name="register_success_but_profile_failed">注册成功，上传头像失败，将使用默认头像</string>
    <string name="register_failed_unknown_error">发生未知错误</string>

    <string name="login_please_input_account">请输入用户名或手机号码</string>
    <string name="login_successful">登录成功</string>
    <string name="login_failed">登录失败</string>

    <string name="confirm">确认</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="title_activity_publish_status">发表状态</string>
    <string name="load_more">加载更多</string>
    <string name="all_user_status">所有用户的状态</string>
    <string name="user_info">用户信息</string>
    <string name="article_details">文章信息</string>
    <string name="dismiss">取消</string>
    <string name="publish">发布</string>
    <string name="publish_status">写状态</string>
    <string name="status">状态</string>
    <string name="publish_status_hint">你想说点什么</string>
    <string name="take_photo">拍照</string>
    <string name="from_album">从相册</string>

    <string name="sign_out">退出登录</string>
    <string name="safe_tele_number">手机号</string>

</resources>
