<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_layout_select_pic"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_take_photo"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:background="@drawable/shape_popup_top"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/take_photo"
        android:textColor="@color/black"
        android:textSize="18.0sp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/text_pick_photo"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:background="@drawable/shape_popup_bottom"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/from_album"
        android:textColor="@color/black"
        android:textSize="18.0sp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/text_cancle"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_margin="10.0dip"
        android:background="@drawable/shape_popup"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/dismiss"
        android:textColor="@color/black"
        android:textSize="18.0sp"
        android:textStyle="bold"/>
</LinearLayout>