<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <ImageView
        android:visibility="gone"
        android:padding="@dimen/register_app_name_padding"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_marginTop="@dimen/margin_dp_32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/register_app_name_padding"
        android:paddingRight="@dimen/register_app_name_padding">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/accountContainer"
            android:textColorHint="@color/login_text_input_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/accountEditor"
                android:textColor="@color/login_text_color"
                android:textColorHint="@color/login_text_input_hint"
                android:hint="@string/login_phone_number_or_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passWordContainer"
            android:textColorHint="@color/login_text_input_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accountContainer"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:passwordToggleTint="@color/selector_password_visibility_toggle"
            app:passwordToggleEnabled="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/passWordEditor"
                android:inputType="textPassword"
                android:textColor="@color/login_text_color"
                android:textColorHint="@color/login_text_input_hint"
                android:hint="@string/login_password"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_marginTop="30dp"
            android:textSize="23sp"
            android:background="@drawable/login_selector"
            android:id="@+id/login"
            android:textColor="@color/login_button_text_color"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_register_h"
            android:layout_below="@id/passWordContainer"
            android:text="@string/login"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/login_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login_forget_password"
        android:textColor="@color/selector_forget_password" />

</LinearLayout>
