<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ts.af2.lightlife.activity.MainActivity">

    <!-- TODO: Update blank fragment layout -->
    <fragment
        android:id="@+id/fragment_cycle_viewpager_content"
        android:name="ts.af2.lightlife.view.CycleViewPager"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="180dp"/>
    <LinearLayout
        android:id="@+id/main_features"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image_examination_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/home_apple"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_examination_report"
                android:layout_centerHorizontal="true"
                style="@style/normal_text_style"
                android:layout_below="@id/image_examination_report"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image_examination_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/home_think"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nearby_examination_center"
                android:layout_centerHorizontal="true"
                style="@style/normal_text_style"
                android:layout_below="@id/image_examination_center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image_health_foods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/home_fun"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nearby_health_foods"
                android:layout_centerHorizontal="true"
                style="@style/normal_text_style"
                android:layout_below="@id/image_health_foods"/>
        </RelativeLayout>
    </LinearLayout>
    <ImageView style="@style/line_horizontal_wide" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="32dp"
        android:paddingTop="5dp"
        android:text="@string/hot_topic"
        style="@style/normal_text_style"/>

</LinearLayout>
