<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_a_55"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".activity.SplashActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/green"
        android:textSize="60sp"
        android:textStyle="bold" />


    <RelativeLayout
        android:id="@+id/init_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/init_progress_bar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerInParent="true"
            android:indeterminate="true" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/login_margin_bottom"
        android:layout_marginLeft="@dimen/login_margin_side"
        android:layout_marginRight="@dimen/login_margin_side"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_register_h"
            android:layout_marginLeft="@dimen/login_margin_side"
            android:layout_marginRight="@dimen/login_margin_side"
            android:layout_weight="1"
            android:background="@drawable/login_selector"
            android:clickable="true"
            android:text="@string/login"
            android:textColor="@color/green_400"
            android:textSize="23sp" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_register_h"
            android:layout_marginLeft="@dimen/login_margin_side"
            android:layout_marginRight="@dimen/login_margin_side"
            android:layout_marginTop="@dimen/login_button_margin"
            android:layout_weight="1"
            android:background="@drawable/login_selector"
            android:clickable="true"
            android:text="@string/register"
            android:textColor="@color/green_400"
            android:textSize="23sp" />
    </LinearLayout>
</LinearLayout>